Nov 04 2004  devel  Tweaked macaddr.h again to try to appease different gcc
                     versions.
Nov 01 2004  devel  Tweaked endian_magic and mac_addr - should compile
                     cleanly on non-linux systems and on gcc 2.95 now.
Oct 25 2004 2004-10 Released 2004-10-R1.  Major changes include:
                     Some fixup to gpsd handling (More to come)
                     GCC-3.4 cleanups
                     BSS Timestamp alerts
                     Centrino support (This has been in -devel forever)
                     Support for GPL ADMTek drivers
                     Support for alternate cisco drivers
                     Imagemagick support for new imagemagick api changes
                     Fixed some cygwin compiler errors
                     Expanded alert protocol to carry additional info about the
                      environment that generated the alert
                     Fixed packet number and delta calculations, and sound 
                      output for traffic seen
                     Fixed crankiness with hostap if interface is down
                     Added default "no-type" card to force new users to 
                      configure
                     Lots of other bug fixes
                     Trimmed CHANGELOG file to only this year
                     WSP100 is known to be broken in this release
Oct 25 2004  devel  Fixed 2 errors on bigendian in "stable-devel"
                    Fixed hanging socket on gpsd reconnect
                    Fixed compile error on uclibc with rintf
Sep 08 2004  devel  Fixed earthdistance math w/ info from ESR for network 
                     distance guessing during live capture
Sep 01 2004  devel  Split up packet.h into endian and macaddr files in prep
                    Re-fixed friend class issue in macmap.h in gcc3.4
Aug 15 2004  devel  Fixed log sync event to not start if logging is disabled
                    Fixed BSS timestamp alerts to not trigger in adhoc networks